--- a/HW4/HW4.css
+++ b/HW4/HW4.css
@@ -2,10 +2,11 @@ body {
     font-family: Annie Use Your Telescope;
     font-size: 30px;
     margin: 20px;
-    
+    background-image: url("source.gif");
 }
 
 h1 {
     font-family: Bangers;
     font-size: 40px;
+    align: center;
 }
