--- a/HW4/HW4.css
+++ b/HW4/HW4.css
@@ -2,7 +2,7 @@ body {
     font-family: Annie Use Your Telescope;
     font-size: 30px;
     margin: 20px;
-    background-image: url("source.gif");
+    background-image: url("https://github.com/hathaaaway/hathaaaway.github.io/blob/master/HW4/Materials/source.gif");
 }
 
 h1 {
